# dlabcontroller

./: pyproject.toml
ressources/aberration_correction/: default_zernike_coefficients.txt
ressources/saved_settings/SLM_red/: red_default_settings.txt
src/dlab/diagnostics/ui/: andor_live_window.py  slm_window.py
src/dlab/diagnostics/ui/scans/: grid_scan_tab.py  two_color_scan_tab.py
src/dlab/hardware/drivers/SLM_driver/: _slm_py.py
src/dlab/hardware/wrappers/: phase_settings.py  slm_controller.py
