[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlab"
version = "2.2.0"
requires-python = ">=3.10"
dependencies = [
  "PyQt5",
  "pyqt5-qt5==5.15.2 ; sys_platform == 'win32'",
  "pyqt5-qt5 ; sys_platform != 'win32'",
  "pyyaml",
  "numpy",
  "matplotlib",
  "prometheus-client",
  "pyserial",
  "pylablib",
  "ThorlabsPM100",
  "thorlabs-apt ; sys_platform == 'linux' or sys_platform == 'win32'",
  "pyvisa",
  "scipy",
  "zaber-motion",
  "cmasher",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
dlab = "dlab.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["dlab*"]

[tool.uv]
package = true